--- a/_sass/homepageResponsive.scss
+++ b/_sass/homepageResponsive.scss
@@ -74,6 +74,19 @@
 	#aboutUs .col-sm-4 {
 		max-width: unset;
 	}
+
+	section#aboutUs {
+		display: block;
+	}
+
+	#aboutUs .row {
+		display: block;
+	}
+
+	#aboutUs .col-sm-8 {
+		width: calc(100vw - 2em) !important;
+		display: block;
+	}
 }
 
 
